@@ -157,8 +157,6 @@
                                 <constant>SIGTERM</constant>.</para></listitem>
                         </varlistentry>
 
-                        <xi:include href="user-system-options.xml" xpointer="machine" />
-
                         <xi:include href="standard-options.xml" xpointer="help" />
                         <xi:include href="standard-options.xml" xpointer="version" />
                         <xi:include href="standard-options.xml" xpointer="no-pager" />
